--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -8,3 +8,9 @@
 .fromControl.error span {
     color: red;
 }
+
+.formSummaryError {
+    border: red 2px solid;
+    padding: 5px;
+    color: red;
+}
